fix routing issuse

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://dohung12.github.io/shopping-cart",
+  "homepage": "http://dohung12.github.io/shopping-cart/",
   "name": "cart-reapproach",
   "version": "0.1.0",
   "private": true,
