--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "http://dohung12.github.io/shopping-cart/",
-  "name": "cart-reapproach",
+  "name": "shopping-cart",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
